<resources>
    <string name="app_name">CIMFR Blast Guide</string>
    <string name="appname">CIMFR Blast Guide</string>
    <string name="app_version">Version 1.0</string>
    <string name="CalculatorsMainActivity">Calculators</string>
    <string name="VolCalCalculatorActivity">Volume of Rock</string>
    <string name="VibrationCalculatorActivity">Prediction of Vibration</string>
    <string name="MassChargeCalculatorActivity">Explosive Quantity per hole</string>
    <string name="Calculate">Calculate</string>
    <string name="Length">Length</string>
    <string name="Heigth">Heigth</string>
    <string name="Width">Width</string>
    <string name="inm">in metres</string>
    <string name="regulatory1">DGMS standard for a permissible limit of ground vibration (Technical Circular Number 7 of 1997)</string>
    <string name="inms">in ms</string>
    <string name="regulatory3">Table : Perceptible limits of continuous vibration levels</string>
    <string name="regulatory4">Table: Physical properties of Emulsion matrix</string>
    <string name="regulatory5">Table : Explosive properties of gassed emulsion</string>
    <string name="regulatory2">Table : US Bureau of Mines standard of damage due to air overpressure</string>
    <string name="about">About</string>
    <string name="constant">constant</string>
    <string name="Result">Result</string>
    <string name="inkg">in kg</string>
    <string name="mm">in mm</string>
    <string name="kgm">in kg/m</string>
    <string name="K">K</string>
    <string name="Q">Q</string>
    <string name="D">D</string>
    <string name="b">b</string>
    <string name="BlastActivit">Blast Layout Design</string>
    <string name="Display">Display</string>
    <string name="numcol">No. of holes within row</string>
    <string name="ptOfinitiation">Initial Time</string>
    <string name="vibrationEqu">Vibration Equation</string>
    <string name="delayCol">Delay within Row</string>
    <string name="delayR01">Delay between Rows</string>
    <string name="zero">0</string>
    <string name="blank"></string>
    <string name="department">Department</string>
    <string name="director">Director</string>
    <string name="developers">Developers</string>
    <string name="aboutDirector">Dr. Pradeep Kumar Singh is Director, CSIR-Central Institute of Mining and Fuel Research (CSIR-CIMFR), Dhanbad, a constituent Institute of Council of Scientific and Industrial Research, under the aegis of Ministry of Science and Technology, Government of India.

Dr. Singh has studied from Pre-University to Post Graduate level at Banaras Hindu University, Varanasi, India, and did his Doctor of Engineering Degree from the Technical University, Clausthal, Germany. He has also worked at Lossande Institute of Geosciences, University of Toronto, Canada, as Post Doctoral Fellow. He joined this Institute in 1990 as Scientist ‘B’ and by virtue of his hard work and dedication, rose to the present coveted post of Director.

Dr. Singh has made notable contributions in Explosive Science and Blasting Technologies to solve practical problems in the mining industry encompassing the fields of optimal use of explosive energy in rock fragmentation, explosive energy partitioning, blast vibration, wall-control, fragmentation control, blast design in mines and tunnels, pre-split blast design, cast blast designs in coal mining operations besides correlating structural damages caused due to blast vibrations.

He has authored a blast damage index for underground openings in close vicinity of open-cast blasting operations for Indian coal mines. He has also authored 4 more guidelines, which have been internationally accepted.

Presently, Dr Singh is coordinating research activities of the institute in field of fuel and energy science. He is the National Coordinator of a Pan India project for evaluation and monitoring of quality of Indian coal being supplied by mines in different thermal power plants of the country.  Under his guidance an important project on conversion of coal to liquid fuel was completed. His concerted efforts have led to the development and distribution of Certified Reference Material (CRM) to industries and laboratories for quality assurance and calibration of chemical analyses of bituminous coal. He is now guiding a team of scientists working on Oxy Fuel Combustion of Pulverized Coal, Co – Combustion of Coal and Biomass in FBC and Mercury emissions monitoring from point sources in coal fired plants. He has also initiated research study for development of indigenous technology for production of Methanol from coal.

Based on scientific studies sponsored by different organizations, Dr. Singh has written 407 technical reports and 9 S and T reports funded by Ministry of Coal, Government of India. He has 178 papers published in referred National and International Journals/Symposia to his credit.  He is also author of 4 books and 4 booklets.

Dr. Singh is recipient of prestigious National Mineral Award, Raman Research Award and CSIR Technology Award for Business Development and Technology Marketing for 2017 and 2018. He is a Fellow of German Academy and National Academy of Sciences, India.

Dr. Singh is Chairman of BIS Committee on Solid Mineral Fuels Sectional Committee (PCDC-7), Chairman of the Committee for Quality Coal for Power Generation, Member of SSRC, Ministry of Coal, Member of Governing body of NIRM; Member of Research Advisory Council, NTPC-NETRA, Noida, Member of Committee on Central Government Programming Board, GSI. He is also representing India in the International Committee on World Forum of University on Resources and Sustainability, Headquartered in Germany.

Dr. Singh was deputed for scientific pursuits to Australia, Austria, Canada, Chile, China, France, Germany, Japan, Netherlands, Norway, Poland, Portugal, Russia, Spain, Sweden, Tanzania and USA.</string>
</resources>
